--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -52,6 +52,12 @@ jobs:
     needs: build
     if: github.event_name == 'push'
     steps:
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@master
         with:
