--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,17 @@ dependencies {
     testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
 
+    testImplementation 'org.springframework:spring-test'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
+
+    testImplementation 'com.jayway.jsonpath:json-path:2.8.0'
+
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.springframework.security:spring-security-test:5.8.13'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310' // LocalDate 처리
+
     // Logging
     implementation('org.slf4j:slf4j-api:2.0.9')
     runtimeOnly('org.slf4j:jcl-over-slf4j:2.0.9')
