--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,13 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.4.6'
     implementation 'org.mybatis:mybatis-spring:1.3.2'
 
+    //OpenCSV
+    implementation 'com.opencsv:opencsv:5.7.1'
+
+    //JavaMailSender
+    implementation 'org.springframework:spring-context-support:5.3.9'
+    implementation 'javax.mail:mail:1.4.7'
+
 }
 
 test {
